# OnlinePlatform

./: .env  README.md  pyproject.toml
OnlinePlatform/: settings.py  urls.py  yasg.py
circuit/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
circuit/migrations/: 0001_initial.py
